# pandorust

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml
src/: icon-loader.ts  main.ts  router.ts  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/pandorust-core/: Cargo.toml
src-tauri/pandorust-core/src/: components.rs  custom_err.rs  lib.rs
src-tauri/project-cleanser/: Cargo.toml
src-tauri/project-cleanser/src/: lib.rs  logic.rs  parts.rs
src-tauri/quick-find/: Cargo.toml
src-tauri/quick-find-core/: Cargo.toml
src-tauri/quick-find-core/src/: lib.rs
src-tauri/quick-find/src/: lib.rs  logic.rs  parts.rs
src-tauri/src/: lib.rs  main.rs
src/pages/project-cleanser/: index.ts  style.css  template.html
src/pages/quick-find/: index.ts  style.css  template.html
src/styles/: main.css
