[package]
name = "project-cleanser"
version = "0.1.0"
edition = "2024"

[dependencies]
# XML (pom.xml) 解析
quick-xml = { version = "0.30.0", features = ["serialize"] }
# Serde 框架，用于数据结构和格式之间的转换
serde = { version = "1.0.219", features = ["derive"] }
# 将字节数格式化为人类可读的字符串 (e.g., "2.1 GB")
humansize = "2.1.3"
jwalk = "0.8.1"     # 多核心并行处理，相当于walkdir + rayon的升级版
chrono = "0.4.41"
log = "0.4.27"

pandorust-core = { path = "../pandorust-core" }